# pre-commit-cpp

./: .pre-commit-hooks.yaml  README.md  main  setup.cfg
hooks/: header-guard.py
pre_commit_hooks_cpp/: header_guard.py  legal.py  normalise.py  normalise_cpp.py  normalise_opencl.py
