[metadata]
name = pre-commit-hooks-cpp
version = 0.2.2
description = Pre-commit hooks for C/C++
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/igankevich/pre-commit-hooks
author = Ivan Gankevich
author_email = i.gankevich@spbu.ru
license = Unlicense
license_file = LICENSE

[options]
packages = find:
install_requires =
    chardet

[options.entry_points]
console_scripts =
    normalise = pre_commit_hooks_cpp.normalise:main
    header-guard = pre_commit_hooks_cpp.header_guard:main

[bdist_wheel]
universal = True
