[metadata]
name = pre-commit-hooks-cpp
version = 0.6.3
description = Pre-commit hooks for C/C++
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/igankevich/pre-commit-cpp
author = Ivan Gankevich
author_email = i.gankevich@spbu.ru
license = Unlicense
license_file = LICENSE

[options]
packages = find:
install_requires =
    chardet

[options.entry_points]
console_scripts =
    normalise = pre_commit_hooks_cpp.normalise:main
    header-guard = pre_commit_hooks_cpp.header_guard:main
    normalise-cpp = pre_commit_hooks_cpp.normalise_cpp:main
    normalise-opencl = pre_commit_hooks_cpp.normalise_opencl:main
    legal = pre_commit_hooks_cpp.legal:main

[bdist_wheel]
universal = True
